--- a/tutorials/excel.html
+++ b/tutorials/excel.html
@@ -1,11 +1,10 @@
 <!-- Snell, Dallin
-  -- 09 NOV 2017
-  -- Excel tutorial page
+  ** 09 NOV 2017
+  ** Excel tutorial page
 -->
 
 <!DOCTYPE html>
 <html lang = "en-US">
-<html>
   <head>
     <style>
     </style>
@@ -241,6 +240,7 @@
     </div>
 
     <footer style="padding: 10px;">
+      <p id="suggestions">Thanks for reading! If you have any suggestions for the site feel free to shoot me an email at <a href="mailto:snellcorporate@gmail.com">snellcorporate@gmail.com</a>!</p>
       <div style="text-align: right;">
         <p><a href="#">Go to top</a>&emsp;Updated: 23 DEC 2017</p>
       </div>
