--- a/cheese.html
+++ b/cheese.html
@@ -71,6 +71,7 @@
           <li>Cheese wheels were originally used by cheesemongers to roll their wares, instead of carrying them.</li>
           <li><i>Turophile</i> is someone who loves cheese.</li>
           <li>On September 18, 2015, the <a href="http://www.guinnessworldrecords.com/world-records/largest-cheese-sculpture" target="_blank">largest cheese sculpture</a> was finished--weighing over 1,500 pounds!</li>
+          <li>Cheese is a living and breathing thing, so it needs air. Cheese paper is specifically made to maintain partial air and moisture, but waxed or parchment paper will also do the trick.</li>
         </ol> <br/>
 
         <p>If you liked these cheese facts, maybe you'd like some random facts about <a href="./squirrels.html">Squirrels</a> too!</p>
