--- a/cheese.html
+++ b/cheese.html
@@ -72,6 +72,9 @@
           <li><i>Turophile</i> is someone who loves cheese.</li>
           <li>On September 18, 2015, the <a href="http://www.guinnessworldrecords.com/world-records/largest-cheese-sculpture" target="_blank">largest cheese sculpture</a> was finished--weighing over 1,500 pounds!</li>
           <li>Cheese is a living and breathing thing, so it needs air. Cheese paper is specifically made to maintain partial air and moisture, but waxed or parchment paper will also do the trick.</li>
+          <li>Fresh cheeses such as ricotta, burrata, and cottage cheese should not have much of an aroma—if they have a strong smell, they are likely spoiled. These should be kept for a maximum of 7-10 days.</li>
+          <li>As cheese sits, its moisture collects at the bottom. Soft cheeses should be turned over every few days to distribute the moisture and oil content.</li>
+          <li>While you can safely cut mold off the outside of a hard cheese, any fresh cheese with mold on it should be thrown out.</li>
         </ol> <br/>
 
         <p>If you liked these cheese facts, maybe you'd like some random facts about <a href="./squirrels.html">Squirrels</a> too!</p>
@@ -94,7 +97,7 @@
     </div>
     <footer style="padding: 10px">
       <div style="text-align: right;">
-        <p>Updated: 13 JAN 2018</p>
+        <p>Updated: 25 JAN 2018</p>
       </div>
     </footer>
   </body>
