--- a/squirrels.html
+++ b/squirrels.html
@@ -25,10 +25,12 @@
     </div>
 
     <header style="padding: 10px;">
-      <ul class="page_links">
-        <li class="page_links"><a href="./index.html">Home</a></li>
-        <li class="page_links"><a href="./cheese.html">Cheese</a></li>
-      </ul>
+      <nav>
+        <ul class="page_links">
+          <li class="page_links"><a href="./index.html">Home</a></li>
+          <li class="page_links"><a href="./cheese.html">Cheese</a></li>
+        </ul>
+      </nav>
     </header>
 
     <div class="container-fluid">
@@ -36,6 +38,23 @@
         <!-- for text about squirrels -->
         <h1>Squirrels</h1>
         <p>This page might seem random as well, but if you ask my siblings I've had a love for squirrels for quite a while (I don't remember why, though...).</p>
+        <h2>Facts</h2>
+        <ol>
+          <li>Squirrels have four front teeth that never stop growing.</li>
+          <li>The smallest squirrel is only 5 inches long. Conversely, the largest squirrel is three feet long.</li>
+          <li>Female squirrels give birth to two to eight babies per litter.</li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ol>
       </div>
       <div class="col-md-6 col-lg-2">
         <!-- for pictures -->
@@ -45,7 +64,7 @@
     <!-- remove the footer positioning if the page scrolls -->
     <footer style="padding: 10px; position: absolute; right: 0; bottom: 0;">
       <div style="text-align: right;">
-        <p>Updated: 15 DEC 2017</p>
+        <p>Updated: 30 JAN 2017</p>
       </div>
     </footer>
   </body>
