--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Snell, Dallin
-  -- 09 NOV 2017
-  -- my personal webpage
+     09 NOV 2017
+     my personal webpage
 -->
 
 <!DOCTYPE html>
@@ -38,6 +38,7 @@
         <ul>
           <li><a href="./about.html">About Me</a></li>
           <li><a href="./cheese.html">Cheese Facts</a></li>
+          <li><a href="./squirrels.html">Squirrel Facts</a></li>
           <li><a href="./inspiration.html">Inspiration</a></li>
         </ul>
         <li>Tutorial side</li>
@@ -50,7 +51,7 @@
     <!-- remove the footer positioning if the page scrolls -->
     <footer style="padding: 10px; position: absolute; right: 0; bottom: 0;">
       <div style="text-align: right;">
-        <p>Updated: 15 DEC 2017</p>
+        <p>Updated: 30 JAN 2017</p>
       </div>
     </footer>
   </body>
