Update Password Generator (Extra Strong_mobile) _ SS64.html

--- a/pass/Password Generator (Extra Strong_mobile) _ SS64.html
+++ b/pass/Password Generator (Extra Strong_mobile) _ SS64.html
@@ -12,8 +12,8 @@
     <link rel="apple-touch-icon" sizes="196x196" href="https://ss64.com/pass/mobile/icon.png">
     <link rel="shortcut icon" sizes="196x196" href="https://ss64.com/pass/mobile/icon.png">
     <title>Password Generator (Extra Strong/mobile) | SS64.com</title>
-    <link href="./Password Generator (Extra Strong_mobile) _ SS64_files/bootstrap.min.css" rel="stylesheet">
-    <link href="./Password Generator (Extra Strong_mobile) _ SS64_files/custom.css" rel="stylesheet">
+    <link href="./bootstrap.min.css" rel="stylesheet">
+    <link href="./custom.css" rel="stylesheet">
     <script type="text/javascript">
         /*
          * The sites to display.
