--- a/cheese.html
+++ b/cheese.html
@@ -7,6 +7,16 @@
 <!DOCTYPE html>
 <html lang = "en-US">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115411693-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-115411693-1');
+    </script>
+
     <title>Cheese!</title>
     <link rel="icon" href="./images/cheese_icon.ico"/>
     <link rel="stylesheet" type="text/css" href="./themes.css">
