--- a/music.html
+++ b/music.html
@@ -1,11 +1,21 @@
 <!-- Snell, Dallin
-  -- 20 DEC 2017
-  -- music
+     20 DEC 2017
+     music
 -->
 
 <!DOCTYPE html>
 <html lang = "en-US">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115411693-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-115411693-2');
+    </script>
+
     <title>Music</title>
     <link rel="icon" href="./images/music_icon.ico"/>
     <link rel="stylesheet" type="text/css" href="./themes.css">
