updates to squirrel.html
Various changes

--- a/squirrels.html
+++ b/squirrels.html
@@ -32,20 +32,37 @@
     </header>
 
     <div class="container-fluid">
-      <div class="col-md-6 col-lg-9">
+      <div class="col-md-6 col-lg-8">
         <!-- for text about squirrels -->
         <h1>Squirrels</h1>
         <p>This page might seem random as well, but if you ask my siblings I've had a love for squirrels for quite a while (I don't remember why, though...).</p>
+        <nav>
+          <ul>
+            <li><a href="#fox_squirrel"><del>Fox Squirrels</del></a></li>
+            <li><a href="#"><del>Eastern Gray Squirrel</del></a></li>
+            <li><a href="#"><del>California Ground Squirrel</del></a></li>
+            <li><a href="#"><del>Southern/Northern Flying Squirrel</del></a></li>
+            <li><a href="#"><del></del></a></li>
+            <!-- <li><a href="#"><del></del></a></li> -->
+          </ul>
+        </nav>
+        <section id="fox_squirrel"> <!-- https://sciencing.com/types-squirrels-8209821.html -->
+          <h3>Fox Squirrel</h3>
+          <p>Fox squirrels can be found primarily on the eastern half of the United States. They have reddish gray and pale brown fur (reminiscent of fox fur). Fox squirrels actually spend a decent amount of time on the ground (instead of in trees as most people commonly think of squirrels). They tend to prefer places where woodlands and open fields come together.</p>
+          <img src="./images/squirrels/fox_squirrel_1.jpg" alt="Fox Squirrel" title="Fox squirrel" width="220"/>&emsp;
+          <img src="./images/squirrels/fox_squirrel_2.jpg" alt="Fox Squirrel" title="Fox squirrel" width="220"/>&emsp;
+          <img src="./images/squirrels/fox_squirrel_3.jpg" alt="Fox Squirrel" title="Fox squirrel" width="220"/>
+        </section>
       </div>
-      <div class="col-md-6 col-lg-2">
+      <div class="col-md-6 col-lg-4" style="text-align: center;">
         <!-- for pictures -->
-        <img src="./images/squirrels/surprised_squirrel.jpg" alt="Surprised squirrel" width="267" height="200"/>
+        <img src="./images/squirrels/surprised_squirrel.jpg" alt="Surprised squirrel" title="Surprised squirrel" width="267" height="200"/>
       </div>
     </div>
     <!-- remove the footer positioning if the page scrolls -->
-    <footer style="padding: 10px; position: absolute; right: 0; bottom: 0;">
+    <footer style="padding: 10px;">
       <div style="text-align: right;">
-        <p>Updated: 15 DEC 2017</p>
+        <p><a href="#">Go to top</a>&emsp;Updated: 25 DEC 2017</p>
       </div>
     </footer>
   </body>
