Moved inspiration.html to subdirectory

--- a/inspiration/inspiration.html
+++ b/inspiration/inspiration.html
@@ -1,6 +1,6 @@
 <!-- Snell, Dallin
-  -- 14 DEC 2017
-  -- inspiration from great men and women over the course of my life
+     14 DEC 2017
+     inspiration from great men and women over the course of my life
 -->
 
 <!DOCTYPE html>
