Moved instruments.html to subdirectory

--- a/instruments/instruments.html
+++ b/instruments/instruments.html
@@ -1,6 +1,6 @@
 <!-- Snell, Dallin
-  -- 27 DEC 2017
-  -- instruments page
+     27 DEC 2017
+     instruments page
 -->
 
 <!DOCTYPE html>
@@ -21,10 +21,10 @@
   </head>
   <body>
     <!-- Maybe some helps:
-      -- http://fontawesome.io/icons/     (included above)
-      --    Social media:
-      -- https://www.w3schools.com/howto/howto_css_social_media_buttons.asp
-      -- https://lipis.github.io/bootstrap-social/
+         http://fontawesome.io/icons/     (included above)
+            Social media:
+         https://www.w3schools.com/howto/howto_css_social_media_buttons.asp
+         https://lipis.github.io/bootstrap-social/
     -->
     <div id="construction" class="alert alert-info">
       <p><strong>Under construction!</strong> Thank you for your patience!</p>
