Updated some dependencies in index.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </style>
     <title>Home</title>
     <link rel="icon" href="./images/kali_icon.ico"/>
-    <link rel="stylesheet" type="text/css" href="./themes.css">
-    <script src="scripts.js"></script>
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
+    <script src="./scripts/scripts.js"></script>
     <meta name="author" content="Dallin Snell"/>
     <meta charset="utf-8"/>
     <!-- Bootstrap links -->
@@ -51,7 +51,7 @@
     <!-- remove the footer positioning if the page scrolls -->
     <footer style="padding: 10px; position: absolute; right: 0; bottom: 0;">
       <div style="text-align: right;">
-        <p>Updated: 30 JAN 2017</p>
+        <p>Updated: 15 MAY 2018</p>
       </div>
     </footer>
   </body>
