--- a/cheese/cheese.html
+++ b/cheese/cheese.html
@@ -7,6 +7,7 @@
 <!DOCTYPE html>
 <html lang = "en-US">
   <head>
+    <meta charset="utf-8">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115411693-1"></script>
     <script>
@@ -18,10 +19,9 @@
     </script>
 
     <title>Cheese!</title>
-    <link rel="icon" href="./images/cheese_icon.ico"/>
-    <link rel="stylesheet" type="text/css" href="./themes.css">
-    <meta name="author" content="Dallin Snell"/>
-    <meta charset="utf-8"/>
+    <link rel="icon" href="./images/cheese_icon.ico">
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
+    <meta name="author" content="Dallin Snell">
     <!-- Bootstrap links -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -29,7 +29,7 @@
     <!-- font awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body style="background-color: #E9E581;">
+  <body>
     <!-- UNDER CONSTRUCTION ALERT -->
     <!-- <div class="alert alert-info">
       <p><strong>Under construction!</strong> Thank you for your patience!</p>
@@ -37,13 +37,13 @@
 
     <header>
       <ul class="page_links">
-        <li class="page_links"><a href="./index.html">Home</a></li>
-        <li class="page_links"><a href="./inspiration.html">Inspiration</a></li>
-        <li class="page_links"><a href="./music.html">Music</a></li>
-        <li class="page_links"><a href="./squirrels.html">Squirrels</a></li>
+        <li class="page_links"><a href="./../index.html">Home</a></li>
+        <li class="page_links"><a href="./../inspiration/inspiration.html">Inspiration</a></li>
+        <li class="page_links"><a href="./../music/music.html">Music</a></li>
+        <li class="page_links"><a href="./../squirrels/squirrels.html">Squirrels</a></li>
       </ul>
       <figure>
-        <img src="./images/cheese/cheese_banner.jpg" alt="cheese banner image" width="100%"/>
+        <img src="./images/cheese_banner.jpg" alt="cheese banner image" width="100%">
         <figcaption></figcaption>
       </figure>
     </header>
@@ -89,7 +89,7 @@
 
         <p>If you liked these cheese facts, maybe you'd like some random facts about <a href="./squirrels.html">Squirrels</a> too!</p>
         <figure>
-          <img src="./images/squirrels/surprised_squirrel.jpg" alt="squirrel" width="267" height="200"/>
+          <img src="./../squirrels/images/surprised_squirrel.jpg" alt="squirrel" width="267" height="200">
           <figcaption>&emsp;Rocky Mountain squirrel</figcaption>
         </figure>
 
@@ -100,14 +100,14 @@
       <div class="col-md-6 col-lg-2">
         <!-- for pictures -->
         <figure>
-          <img src="./images/cheese/CheddarWheel.jpg" alt="Cheddar Cheese Wheel" width="313" height="313"/>
+          <img src="./images/CheddarWheel.jpg" alt="Cheddar Cheese Wheel" width="313" height="313">
           <figcaption>&emsp;Cheddar cheese wheel</figcaption>
         </figure>
       </div>
     </div>
-    <footer style="padding: 10px">
-      <div style="text-align: right;">
-        <p>Updated: 25 JAN 2018</p>
+    <footer class="pad">
+      <div class="right-align">
+        <p>Updated: 16 MAY 2018</p>
       </div>
     </footer>
   </body>
