--- a/history/history.html
+++ b/history/history.html
@@ -1,19 +1,17 @@
 <!--
-Snell, Dallin
-10 NOV 2017
+    Snell, Dallin
+    10 NOV 2017
 
 -->
 
 <!DOCTYPE html>
-<html lang = "en">
+<html lang = "en-US">
   <head>
-    <style>
-    </style>
+    <meta charset="utf-8">
     <title>Past Strings</title>
-    <link rel="icon" href="./images/kali_icon.ico"/>
-    <link rel="stylesheet" type="text/css" href="./themes.css">
-    <meta name="author" content="Dallin Snell"/>
-    <meta charset="utf-8"/>
+    <link rel="icon" href="./images/kali_icon.ico">
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
+    <meta name="author" content="Dallin Snell">
   </head>
   <body>
     <div>
