--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
 <!DOCTYPE html>
 <html lang = "en-US">
   <head>
-    <style>
-    </style>
+    <meta charset="utf-8">
     <title>Home</title>
-    <link rel="icon" href="./images/kali_icon.ico"/>
+    <link rel="icon" href="./images/kali_icon.ico">
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
     <script src="./scripts/scripts.js"></script>
-    <meta name="author" content="Dallin Snell"/>
-    <meta charset="utf-8"/>
+    <meta name="author" content="Dallin Snell">
     <!-- Bootstrap links -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -21,7 +19,7 @@
     <!-- font awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body style="background-color:powderblue; padding: 10px;">
+  <body>
     <div class="alert alert-info">
       <p><strong>Under construction!</strong> Thank you for your patience!</p>
     </div>
@@ -31,15 +29,15 @@
     </header>
     <h1>Directory</h1>
     <p>Hi! Welcome to my page. I created this website because I've always wanted to create a website (I find stuff like this really fun; weird, right?). I have two sections of the site, though. The first is a sort of blog-type setup. It might appear kind of random and scattered at times, but it does have some nuggets that you could find appealing. Also, if you're looking to find out more about me, this is the spot to go. The second part of the site is devoted to some simple tutorials I've created. I have been tinkering with computers my whole life and I've learned from some pretty knowledgeable people. On this side of the site, you can learn some of what I know. I cover a wide variety of topics ranging from Microsoft Office products to operating systems to computer security and more.</p>
-    <br/><br/><br/>
+    <br><br><br>
     <h3>Sitemap:</h3>
       <ul>
         <li>Blog(ish) side</li>
         <ul>
-          <li><a href="./about.html">About Me</a></li>
-          <li><a href="./cheese.html">Cheese Facts</a></li>
-          <li><a href="./squirrels.html">Squirrel Facts</a></li>
-          <li><a href="./inspiration.html">Inspiration</a></li>
+          <li><a href="./about/about.html">About Me</a></li>
+          <li><a href="./cheese/cheese.html">Cheese Facts</a></li>
+          <li><a href="./squirrels/squirrels.html">Squirrel Facts</a></li>
+          <li><a href="./inspiration/inspiration.html">Inspiration</a></li>
         </ul>
         <li>Tutorial side</li>
         <ul>
@@ -49,8 +47,8 @@
         </ul>
       </ul>
     <!-- remove the footer positioning if the page scrolls -->
-    <footer style="padding: 10px; position: absolute; right: 0; bottom: 0;">
-      <div style="text-align: right;">
+    <footer class="pad" style="position: absolute; right: 0; bottom: 0;">
+      <div class="right-align">
         <p>Updated: 15 MAY 2018</p>
       </div>
     </footer>
