--- a/instruments/instruments.html
+++ b/instruments/instruments.html
@@ -6,12 +6,12 @@
 <!DOCTYPE html>
 <html lang = "en-US">
   <head>
+    <meta charset="utf-8">
     <title>Instruments</title>
-    <link rel="icon" href="./images/instruments_icon.ico"/>
-    <link rel="stylesheet" type="text/css" href="./themes.css">
+    <link rel="icon" href="./images/instruments_icon.ico">
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
     <script src="scripts.js"></script>
-    <meta name="author" content="Dallin Snell"/>
-    <meta charset="utf-8" />
+    <meta name="author" content="Dallin Snell">
     <!-- Bootstrap links -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -31,18 +31,18 @@
     </div>
     <header>
       <ul class="page_links">
-        <li class="page_links"><a href="./index.html">Home</a></li>
-        <li class="page_links"><a href="./inspiration.html">Inspiration</a></li>
-        <li class="page_links"><a href="./music.html">Music</a></li>
+        <li class="page_links"><a href="./../index.html">Home</a></li>
+        <li class="page_links"><a href="./../inspiration/inspiration.html">Inspiration</a></li>
+        <li class="page_links"><a href="./../music/music.html">Music</a></li>
       </ul>
     </header>
     <div class="container-fluid">
-      <div id="-quote" style="text-align: center;">
-        <quote style="font-size: 1.5em;">"One note does not make a symphony; one artist does not make an orchestra."</quote>
-        <p style="font-size: 1.1em"><strong>Matshona Dhliwayo</strong></p>
+      <div id="dhliwayo-quote" class="center-align">
+        <quote>"One note does not make a symphony; one artist does not make an orchestra."</quote>
+        <p class="attribution"><strong>Matshona Dhliwayo</strong></p>
       </div>
 
-      <hr style="height:1px; border:none; background-color:#C0CCCC;"/>  <br/>
+      <hr class="horizontal-rule">  <br>
 
       <div id="content" class="col-md-6 col-lg-9">
         <!-- content -->
@@ -71,75 +71,75 @@
           <li><a href="#"><del>Drums</del></a></li>
           <!-- <li><a href="#"><del></del></a></li> -->
         </ul>
-        <br/>
+        <br>
         <div id="wind-instruments">
           <div id="bassoon">
             <h4>Bassoon</h4>
-            <img src="" width="" height="" alt=""/>
-            <br/><br/><p><!-- instrument description --></p>
-          </div>          <br/><br/><br/> <!-- end of Bassoon -->
+            <img src="" width="" height="" alt="">
+            <br><br><p><!-- instrument description --></p>
+          </div>          <br><br><br> <!-- end of Bassoon -->
           <div id="clarinet">
             <h4>Clarinet</h4>
-            <img src="" width="" height="" alt=""/>
-            <br/><br/><p><!-- instrument description --></p>
-          </div>          <br/><br/><br/> <!-- end of Clarinet -->
+            <img src="" width="" height="" alt="">
+            <br><br><p><!-- instrument description --></p>
+          </div>          <br><br><br> <!-- end of Clarinet -->
           <div id="flute">
             <h4>Flute</h4>
-            <img src="" width="" height="" alt=""/>
-            <br/><br/><p><!-- instrument description --></p>
-          </div>          <br/><br/><br/> <!-- end of Flute -->
+            <img src="" width="" height="" alt="">
+            <br><br><p><!-- instrument description --></p>
+          </div>          <br><br><br> <!-- end of Flute -->
           <div id="frenchorn">
             <h4>French Horn</h4>
-            <img src="" width="" height="" alt=""/>
-            <br/><br/><p><!-- instrument description --></p>
-          </div>          <br/><br/><br/> <!-- end of French Horn -->
+            <img src="" width="" height="" alt="">
+            <br><br><p><!-- instrument description --></p>
+          </div>          <br><br><br> <!-- end of French Horn -->
           <div id="oboe">
             <h4>Oboe</h4>
-            <img src="" width="" height="" alt=""/>
-            <br/><br/><p><!-- instrument description --></p>
-          </div>          <br/><br/><br/> <!-- end of Oboe -->
+            <img src="" width="" height="" alt="">
+            <br><br><p><!-- instrument description --></p>
+          </div>          <br><br><br> <!-- end of Oboe -->
           <div id="trombone">
             <h4>Trombone</h4>
-            <img src="" width="" height="" alt=""/>
-            <br/><br/><p><!-- instrument description --></p>
-          </div>          <br/><br/><br/> <!-- end of Trombone -->
+            <img src="" width="" height="" alt="">
+            <br><br><p><!-- instrument description --></p>
+          </div>          <br><br><br> <!-- end of Trombone -->
           <div id="trumpet">
             <h4>Trumpet</h4>
-            <img src="" width="" height="" alt=""/>
-            <br/><br/><p><!-- instrument description --></p>
-          </div>          <br/><br/><br/> <!-- end of trumpet -->
+            <img src="" width="" height="" alt="">
+            <br><br><p><!-- instrument description --></p>
+          </div>          <br><br><br> <!-- end of trumpet -->
           <div id="tuba">
             <h4>Tuba</h4>
-            <img src="" width="" height="" alt=""/>
-            <br/><br/><p><!-- instrument description --></p>
-          </div>          <br/><br/><br/> <!-- end of tuba -->
+            <img src="" width="" height="" alt="">
+            <br><br><p><!-- instrument description --></p>
+          </div>          <br><br><br> <!-- end of tuba -->
         </div> <!-- end of wind instruments -->
         <div id="string-instruments">
           <div id="cello">
             <h4>Cello</h4>
-            <img src="" width="" height="" alt=""/>
-            <br/><br/><p><!-- instrument description --></p>
-          </div>          <br/><br/><br/> <!-- end of Cello -->
+            <img src="" width="" height="" alt="">
+            <br><br><p><!-- instrument description --></p>
+          </div>          <br><br><br> <!-- end of Cello -->
           <div id="harp">
             <h4>Harp</h4>
-            <img src="" width="" height="" alt=""/>
-            <br/><br/><p><!-- instrument description --></p>
-          </div>          <br/><br/><br/> <!-- end of Harp -->
+            <img src="" width="" height="" alt="">
+            <br><br><p><!-- instrument description --></p>
+          </div>          <br><br><br> <!-- end of Harp -->
           <div id="piano">
             <h4>Piano</h4>
-            <img src="" width="" height="" alt=""/>
-            <br/><br/><p><!-- instrument description --></p>
-          </div>          <br/><br/><br/> <!-- end of Piano -->
+            <img src="" width="" height="" alt="">
+            <br><br><p><!-- instrument description --></p>
+          </div>          <br><br><br> <!-- end of Piano -->
           <div id="viola">
             <h4>Viola</h4>
-            <img src="" width="" height="" alt=""/>
-            <br/><br/><p><!-- instrument description --></p>
-          </div>          <br/><br/><br/> <!-- end of Viola -->
+            <img src="" width="" height="" alt="">
+            <br><br><p><!-- instrument description --></p>
+          </div>          <br><br><br> <!-- end of Viola -->
           <div id="violin">
             <h4>Violin</h4>
-            <img src="" width="" height="" alt=""/>
-            <br/><br/><p><!-- instrument description --></p>
-          </div>          <br/><br/><br/> <!-- end of Violin -->
+            <img src="" width="" height="" alt="">
+            <br><br><p><!-- instrument description --></p>
+          </div>          <br><br><br> <!-- end of Violin -->
         </div> <!-- end of string instruments -->
       </div>
       <div id="content" class="col-md-6 col-lg-3">
@@ -149,9 +149,9 @@
     <div id="construction" class="alert alert-info">
       <p><strong>Under construction!</strong> Thank you for your patience!</p>
     </div>
-    <footer style="padding: 10px;">
-      <div style="text-align: right;">
-        <p><a href="#">Go to top</a>&emsp;Updated: 27 DEC 2017</p>
+    <footer class="pad">
+      <div class="right-align">
+        <p><a href="#">Go to top</a>&emsp;Updated: 16 MAY 2018</p>
       </div>
     </footer>
   </body>
@@ -163,8 +163,6 @@
 
           <div id="">
             <h4>instrument title</h4>
-            <img src="" width="" height="" alt=""/>
-            <br/><br/><p>instrument description</p>
-          </div>          <br/><br/><br/> <!-- end of  -->
-
--->
+            <img src="" width="" height="" alt="">
+            <br><br><p>instrument description</p>
+          </div>          <br><br><br> <!-- end of  -->
