--- a/secret/H67MPW033X.html
+++ b/secret/H67MPW033X.html
@@ -1,18 +1,16 @@
 <!--
-Snell, Dallin
-10 NOV 2017
-my personal file download webpage
+    Snell, Dallin
+    10 NOV 2017
+    my personal file download webpage
 -->
 
 <!DOCTYPE html>
 <html lang = "en-US">
   <head>
-    <style>
-    </style>
+    <meta charset="utf-8">
     <title>Secret</title>
-    <link rel="icon" href="./images/kali_icon.ico"/>
-    <meta name="author" content="Dallin Snell"/>
-    <meta charset="utf-8"/>
+    <link rel="icon" href="./images/kali_icon.ico">
+    <meta name="author" content="Dallin Snell">
   </head>
   <body>
     <p>This page has links to various downloadable files and sites. Page first became active on: 10 NOV 2017.</p>
@@ -28,7 +26,7 @@ my personal file download webpage
     <a href="./files/fork.cmd" download>Fork Bomb (Windows)</a><br/>
     <a href="./files/7za_help.txt" download>7Zip help file</a><br/>
     <a href="./files/endecrypt.exe" download>ENDECRYPT v2</a><br/>
-    
+
 
     <br/><br/><button name="reset" id="reset" type="submit" onclick="location.reload()">Reset</button>
   </body>
