--- a/about/about.html
+++ b/about/about.html
@@ -7,11 +7,11 @@
 <!DOCTYPE html>
 <html lang = "en-US">
   <head>
+    <meta charset="utf-8">
     <title>About Me</title>
-    <link rel="icon" href="./images/kali_icon.ico"/>
-    <link rel="stylesheet" type="text/css" href="./themes.css">
-    <meta name="author" content="Dallin Snell"/>
-    <meta charset="utf-8"/>
+    <link rel="icon" href="./images/kali_icon.ico">
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
+    <meta name="author" content="Dallin Snell">
     <!-- Bootstrap links -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -19,18 +19,18 @@
     <!-- font awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body style="padding: 10px;">
+  <body class="pad">
     <div class="alert alert-info">
       <p><strong>Under construction!</strong> Thank you for your patience!</p>
     </div>
     <header>
       <ul class="page_links">
-        <li class="page_links"><a href="./index.html">Home</a></li>
+        <li class="page_links"><a href="./../index.html">Home</a></li>
       </ul>
     </header>
     <div class="container-fluid">
       <h1>About Me</h1>
-      <hr style="height:1px; border:none; background-color:#333;"/>
+      <hr class="horizontal-rule">
       <div class="col-md-6 col-lg-8">
         <h2>Bio (Somewhat short, I know)</h2>
         <p>My name is Dallin Snell. My dad has been in the United States military for my entire life. Because of that, I haven't lived in one place longer than three to four years. I was born in Oklahoma, but most recently lived in Alabama and Utah. Even though I've lived all over the country, I claim Alabama as my home. (War Eagle!) I am currently studying Computer Science at Brigham Young University-Idaho in Rexburg, Idaho.</p>
@@ -52,9 +52,9 @@
         <h4><a href="./inspiration.html">If you need some inspiration.</a></h4>
       </div>
     </div>
-    <footer style="padding: 10px">
-      <div style="text-align: right;">
-        <p>Updated: 13 JAN 2018</p>
+    <footer class="pad">
+      <div class="right-align">
+        <p>Updated: 16 MAY 2018</p>
       </div>
     </footer>
   </body>
