--- a/squirrels/squirrels.html
+++ b/squirrels/squirrels.html
@@ -7,11 +7,11 @@
 <!DOCTYPE html>
 <html lang = "en-US">
   <head>
+    <meta charset="utf-8">
     <title>Squirrels</title>
     <link rel="icon" href="./images/squirrel_icon.ico"/>
-    <link rel="stylesheet" type="text/css" href="./themes.css">
-    <meta name="author" content="Dallin Snell"/>
-    <meta charset="utf-8"/>
+    <link rel="stylesheet" type="text/css" href="./styles/main.css">
+    <meta name="author" content="Dallin Snell">
     <!-- Bootstrap links -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -19,15 +19,15 @@
     <!-- font awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body style="background-color: #196F3D;">
+  <body>
     <div class="alert alert-info">
       <p><strong>Under construction!</strong> Thank you for your patience!</p>
     </div>
 
-    <header style="padding: 10px;">
+    <header class="pad">
       <ul class="page_links">
-        <li class="page_links"><a href="./index.html">Home</a></li>
-        <li class="page_links"><a href="./cheese.html">Cheese</a></li>
+        <li class="page_links"><a href="./../index.html">Home</a></li>
+        <li class="page_links"><a href="./../cheese/cheese.html">Cheese</a></li>
       </ul>
     </header>
 
@@ -36,7 +36,6 @@
         <!-- for text about squirrels -->
         <h1>Squirrels</h1>
         <p>This page might seem random as well, but if you ask my siblings I've had a love for squirrels for quite a while (I don't remember why, though...).</p>
-<<<<<<< HEAD
         <nav>
           <ul>
             <li><a href="#fox_squirrel"><del>Fox Squirrels</del></a></li>
@@ -50,20 +49,19 @@
         <section id="fox_squirrel"> <!-- https://sciencing.com/types-squirrels-8209821.html -->
           <h3>Fox Squirrel</h3>
           <p>Fox squirrels can be found primarily on the eastern half of the United States. They have reddish gray and pale brown fur (reminiscent of fox fur). Fox squirrels actually spend a decent amount of time on the ground (instead of in trees as most people commonly think of squirrels). They tend to prefer places where woodlands and open fields come together.</p>
-          <img src="./images/squirrels/fox_squirrel_1.jpg" alt="Fox Squirrel" title="Fox squirrel" width="220"/>&emsp;
-          <img src="./images/squirrels/fox_squirrel_2.jpg" alt="Fox Squirrel" title="Fox squirrel" width="220"/>&emsp;
-          <img src="./images/squirrels/fox_squirrel_3.jpg" alt="Fox Squirrel" title="Fox squirrel" width="220"/>
+          <img src="./images/fox_squirrel_1.jpg" alt="Fox Squirrel" title="Fox squirrel" width="220">&emsp;
+          <img src="./images/fox_squirrel_2.jpg" alt="Fox Squirrel" title="Fox squirrel" width="220">&emsp;
+          <img src="./images/fox_squirrel_3.jpg" alt="Fox Squirrel" title="Fox squirrel" width="220">
         </section>
       </div>
-      <div class="col-md-6 col-lg-4" style="text-align: center;">
+      <div class="col-md-6 col-lg-4" class="center-align">
         <!-- for pictures -->
-        <img src="./images/squirrels/surprised_squirrel.jpg" alt="Surprised squirrel" title="Surprised squirrel" width="267" height="200"/>
+        <img src="./images/surprised_squirrel.jpg" alt="Surprised squirrel" title="Surprised squirrel" width="267" height="200">
       </div>
     </div>
     <!-- remove the footer positioning if the page scrolls -->
-    <footer style="padding: 10px;">
-      <div style="text-align: right;">
-<<<<<<< HEAD
+    <footer class="pad">
+      <div class="right-align">
         <p><a href="#">Go to top</a>&emsp;Updated: 25 DEC 2017</p>
       </div>
     </footer>
