Various updates: see extended description
* updated semantics throughout
* added a custom font
* updated Exercising section
* updated TV section

--- a/about/about.html
+++ b/about/about.html
@@ -8,6 +8,7 @@
 <html lang = "en-US">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="icon" href="./images/kali_icon.ico">
     <link rel="stylesheet" type="text/css" href="./styles/main.css">
@@ -18,6 +19,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- font awesome icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- fonts -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sunflower:300">
   </head>
   <body class="pad">
     <div class="alert alert-info">
@@ -32,17 +35,25 @@
       <h1>About Me</h1>
       <hr class="horizontal-rule">
       <div class="col-md-6 col-lg-8">
-        <h2>Bio (Somewhat short, I know)</h2>
-        <p>My name is Dallin Snell. My dad has been in the United States military for my entire life. Because of that, I haven't lived in one place longer than three to four years. I was born in Oklahoma, but most recently lived in Alabama and Utah. Even though I've lived all over the country, I claim Alabama as my home. (War Eagle!) I am currently studying Computer Science at Brigham Young University-Idaho in Rexburg, Idaho.</p>
+        <section class="bio">
+            <h2>Bio (Somewhat short, I know)</h2>
+            <p>My name is Dallin Snell. My dad has been in the United States military for my entire life. Because of that, I haven't lived in one place longer than three to four years. I was born in Oklahoma, but most recently lived in Alabama and Utah. Even though I've lived all over the country, I claim Alabama as my home. (War Eagle!) I am currently studying Computer Science at Brigham Young University-Idaho in Rexburg, Idaho.</p>
+        </section> <!-- class: bio -->
 
         <h2>Interests</h2>
-        <h3>TV</h3>
-        <p>I've had a revived interest in TV shows in the past two years or so. One show I'm really into is Game of Thrones (yes, I know, everybody is in to it too). I'm waiting (with bated breath) for the eighth season to come out; but who isn't, right? I also watch Ballers (finished the last season last night). As for non-HBO shows, I watch Burn Notice (the one with Jeffrey Donovan and Gabrielle Anwar) and Life (starring Damian Lewis and Adam Arkin).</p>
-        <p>I also enjoying going to the theater to watch new movies, but I'm a poor college student so that doesn't happen as often as I'd like. I did go and see <i>Geostorm</i> recently. It was decent. Not quite what I expected, but definitely a good watch. <i>Flatlines</i> was also good. It almost looked like the producers were trying for a scientific horror; so if you're easily scared, stay away. There was a guy in the theater who would scream at every intense part (Seriously, even if it wasn't scary and was just slightly intense, he would jump and yell. It was great.). <i>Jumanji</i> was fantastic! The actors did a phenomenal job while filming; however, I feel that Jack Black and Kevin Hart really made the movie. Definitely a must-see.</p>
-        <h3>Exercising</h3>
-        <p>I've always had a love for exercising. Since for as long as I can remember, I have loved to get up and work my body. Whether it's hitting the gym, swimming, running, or hiking I love it! I mostly do bodyweight exercises now, because I don't have as much time as I used to.</p>
-        <h3>Computers</h3>
-        <p>Computers are also one of my passions. Ever since I was old enough to be on a computer I've been tinkering around on them. I had a friend ask me one time where I learned what to do to fix a problem he had. I told him he wouldn't believe me. My secret: I just played around trying to fix things/cause problems intentionally.</p>
+        <section class="tv">
+            <h3>TV</h3>
+            <p>I've had a revived interest in TV shows in the past two years or so. One show I'm really into is Game of Thrones (yes, I know, everybody is in to it too). I'm waiting (with bated breath) for the eighth season to come out; but who isn't, right? I also watch Ballers (finished the last season last night). As for non-HBO shows, I watch Burn Notice (the one with Jeffrey Donovan and Gabrielle Anwar) and Life (starring Damian Lewis and Adam Arkin).</p>
+            <p>I also enjoying going to the theater to watch new movies, but I'm a poor college student so that doesn't happen as often as I'd like. I did go and see <i>Geostorm</i> recently. It was decent. Not quite what I expected, but definitely a good watch. <i>Flatlines</i> was also good. It almost looked like the producers were trying for a scientific horror; so if you're easily scared, stay away. There was a guy in the theater who would scream at every intense part (Seriously, even if it wasn't scary and was just slightly intense, he would jump and yell. It was great.). <i>Jumanji</i> was fantastic! The actors did a phenomenal job while filming; however, I feel that Jack Black and Kevin Hart really made the movie. Definitely a must-see. I went and saw <i>Infinity War</i> with my girlfriend. It was an interesting see. I won't post spoilers yet since not everyone has seen it yet. I will say that it didn't end quite the way I expected it to.</p>
+        </section> <!-- class: tv -->
+        <section class="exercise">
+            <h3>Exercising</h3>
+            <p>I've always had a love for exercising. Since for as long as I can remember, I have loved to get up and work my body. Whether it's hitting the gym, swimming, running, or hiking I love it! I've recently been hitting the gym more frequently. Also, for this semester in school I'm enrolled in an Army fitness class. It's pretty intense, but I'm enjoying myself.</p>
+        </section> <!-- class: exercise -->
+        <section class="computers">
+            <h3>Computers</h3>
+            <p>Computers are also one of my passions. Ever since I was old enough to be on a computer I've been tinkering around on them. I had a friend ask me one time where I learned what to do to fix a problem he had. I told him he wouldn't believe me. My secret: I just played around trying to fix things/cause problems intentionally.</p>
+        </section> <!-- class: computers -->
       </div>
       <div class="col-md-6 col-lg-4">
         <!-- links -->
@@ -54,7 +65,7 @@
     </div>
     <footer class="pad">
       <div class="right-align">
-        <p>Updated: 16 MAY 2018</p>
+        <p>Updated: 26 MAY 2018</p>
       </div>
     </footer>
   </body>
